# gb-emulator

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml  README.md
core/src/: apu.rs  cartridge.rs  cpu.rs  hardware.rs  interrupt.rs  lib.rs  ppu.rs  serial.rs  timer.rs
core/src/cartridge/: mbc.rs  metadata.rs
core/src/cpu/: execute.rs  instruction.rs
core/tests/: test.rs
core/tests/roms/blargg/: halt_bug.gb  instr_timing.gb  instr_timing.txt
core/tests/roms/blargg/cpu_instrs/: 01-special.gb  01-special.txt  02-interrupts.gb  02-interrupts.txt  03-op sp,hl.txt  03-op_sp_hl.gb  04-op r,imm.txt  04-op_r_imm.gb  05-op rp.txt  05-op_rp.gb  06-ld r,r.txt  06-ld_r_r.gb  07-jr,jp,call,ret,rst.txt  07-jumps.gb  08-misc instrs.txt  08-misc_instrs.gb  09-op r,r.txt  09-op_r_r.gb  10-bit ops.txt  10-bit_ops.gb  11-op a,(hl).txt  11-op_a_hl.gb
core/tests/roms/blargg/dmg_intr_time/: interrupt_time.gb
core/tests/roms/blargg/dmg_sound/: 01-registers.txt  02-len ctr.txt  03-trigger.txt  04-sweep.txt  05-sweep details.txt  06-overflow on trigger.txt  07-len sweep period sync.txt  08-len ctr during power.txt  09-wave read while on.txt  10-wave trigger while on.txt  11-regs after power.txt  12-wave write while on.txt
core/tests/roms/blargg/mem_timing/: 01-read_timing.txt  02-write_timing.txt  03-modify_timing.txt
core/tests/roms/blargg/oam_bug/: 1-lcd_sync.txt  2-causes.txt  3-non_causes.txt  4-scanline_timing.txt  5-timing_bug.txt  6-timing_no_bug.txt  7-timing_effect.txt  8-instr_effect.txt
src/: apu.rs  cartridge.rs  cpu.rs  debug.rs  error.rs  hardware.rs  lib.rs  (+9 more)
(+20 files in other folders)
